@@ -282,6 +282,14 @@ EOF
 				}
 				next;
 			}
+			if($g eq "ambsens") {
+				for($n = 0; $n < scalar(my @ambsens_list = split(',', $config{ambsens}->{list})); $n++) {
+					my $name = trim($ambsens_list[$n]);
+					$gname = "_" . $g;
+					print(OUT "              <option value='" . $gname . $n . "'>" . $name . "</option>\n");
+				}
+				next;
+			}
 			if($g eq "fs" || $g eq "process") {
 				$n = 0;
 				foreach my $k (sort keys %{$config{graphs}}) {
