@@ -80,6 +80,7 @@ secure_log_date_format = %b %e
 	lmsens		= n
 	gensens		= n
 	ipmi		= n
+	ambsens		= n
 	nvidia		= n
 	disk		= n
 	fs		= y
@@ -254,6 +255,30 @@ secure_log_date_format = %b %e
 	rigid = 0
 	limit = 100
 </ipmi>
+
+
+# AMBSENS graph
+# -----------------------------------------------------------------------------
+<ambsens>
+	list = Ambient Temperature
+	<desc>
+		0 = at1
+	</desc>
+	<units>
+		0 = Celsius
+	</units>
+	<cmd>
+		at1 = /path/to/script.sh
+	</cmd>
+	<map>
+		at1 = Gold TEMPer PC USB
+	</map>
+	<alerts>
+	</alerts>
+	graphs_per_row = 2
+	rigid = 0
+	limit = 100
+</ambsens>
 
 
 # NVIDIA graph
@@ -866,7 +891,7 @@ logo_bottom = logo_bot.png
 	remote	= 300x100
 </graph_size>
 
-graph_name = system, kern, proc, hptemp, lmsens, gensens, ipmi, nvidia, disk, fs, zfs, du, net, netstat, tc, libvirt, process, serv, mail, port, user, ftp, apache, nginx, lighttpd, mysql, mongodb, varnish, pagespeed, squid, nfss, nfsc, bind, ntp, chrony, fail2ban, icecast, raspberrypi, phpapc, memcached, apcupsd, nut, wowza, int, verlihub
+graph_name = system, kern, proc, hptemp, lmsens, gensens, ipmi, ambsens, nvidia, disk, fs, zfs, du, net, netstat, tc, libvirt, process, serv, mail, port, user, ftp, apache, nginx, lighttpd, mysql, mongodb, varnish, pagespeed, squid, nfss, nfsc, bind, ntp, chrony, fail2ban, icecast, raspberrypi, phpapc, memcached, apcupsd, nut, wowza, int, verlihub
 
 <graph_title>
 	system		= System load average and usage
@@ -876,6 +901,7 @@ graph_name = system, kern, proc, hptemp, lmsens, gensens, ipmi, nvidia, disk, fs
 	lmsens		= LM-Sensors and GPU temperatures
 	gensens		= Generic sensor statistics
 	ipmi		= IPMI sensor statistics
+	ambsens		= Ambient sensor statistics
 	nvidia		= NVIDIA temperatures and usage
 	disk		= Disk drive temperatures and health
 	fs		= Filesystem usage and I/O activity
@@ -937,6 +963,7 @@ graph_name = system, kern, proc, hptemp, lmsens, gensens, ipmi, nvidia, disk, fs
 	_gensens1	= Temperatures
 	_gensens2	= CPU frequency
 	_ipmi		= IPMI sensors
+	_ambsens	= Ambient sensors
 	_nvidia1	= NVIDIA temperatures
 	_nvidia2	= CPU usage
 	_nvidia3	= Memory usage
